--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,13 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = '23.4.0'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
 }
