--- a/circle.yml
+++ b/circle.yml
@@ -8,8 +8,9 @@ machine:
     GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
 dependencies:
   pre:
-    - echo y | android update sdk --no-ui --all --filter "tools"
-    - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.3,extra-google-m2repository,extra-android-m2repository"
+    # copy hash from `$ANDROID_HOME/licenses`
+    - mkdir -p $ANDROID_HOME/licenses
+    - echo -e "8933bad161af4178b1185d1a37fbf41ea5269c55" > $ANDROID_HOME/licenses/android-sdk-license
 test:
   override:
     - echo 1
