--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         <activity android:name=".NestedScrollViewActivity" />
         <activity android:name=".TypographyActivity" />
         <activity android:name=".ShareActivity" />
-
         <activity
             android:name=".MailShareActivity"
             android:exported="true"
@@ -32,7 +31,7 @@
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".BottomNavigationActivity" />
     </application>
 
 </manifest>
